tests/spec/compile-fail/159_static_thread_start.zn
// category: compile-fail
// stage: mvp
// milestone: M5
// profile: hosted
// purpose: static initialization cannot start OS threads

module tests.fail.staticThreadStart;

static Worker: I32 = Thread.spawn(move () -> I32 { return 1; }); // expected-error[E0801]: static initializer cannot start threads; thread creation must be explicit runtime code
